[package]
name = "jeu_piston"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.11.3"}
# bevy_editor_pls = {git = "https://github.com/jakobhellermann/bevy_editor_pls"}
bevy_rapier2d = { version = "0.22.0", features = [ "simd-stable", "debug-render-2d" ] }

[profile.dev.package."*"]
opt-level = 3

